--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,32 @@
-.row{
-display:inline-block;
-padding: 5px;
-}
-.col{
-   display: block;
-   float: left; 
-   padding: 5px;
-}
-.col1{
-    display: block;
-    float: left; 
-    align-items: flex-start;
-    padding: 5px;
- }
- .col2{
-    display: block;
-    float: left; 
-    align-items: flex-start;
-    padding: 5px;
- }
- .col3{
-    width: 100%;
-    height:auto;
-    padding: 5px;
- }
 /* Your CSS Code here. */
+div.container-fluid{
+        width: 1200px;
+}
+
+.row,.row-2,.row-3,.row-4{
+    display: flex;
+}
+.row-4{
+    justify-content: center;
+}
+
+img{
+    width: 100px;
+    height: 100px;
+    margin: 6px;
+    margin-top: 40px;
+}
+
+.row-2 img{
+    position: relative;
+    margin-left: 30px;
+    left: 250px;
+}
+.row-3 img{
+    position: relative;
+    margin-left: 30px;
+    left: 400px;
+}
+.row-4 img{
+
+}
